@@ -5,3 +5,4 @@ copyright_holder = Ricardo SIGNES <rjbs@cpan.org>
 
 [@RJBS]
 version = 1
+github_issues = 1
